--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -55,7 +55,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:backgroundTint="@color/blue"
+                android:backgroundTint="@color/dark_grey"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="@string/change_password"
                 android:textAllCaps="false"
@@ -74,7 +74,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="16dp"
-                android:backgroundTint="@color/blue"
+                android:backgroundTint="@color/dark_grey"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="@string/enable_pin_code"
                 android:textAllCaps="false"
@@ -90,7 +90,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:backgroundTint="@color/blue"
+                android:backgroundTint="@color/dark_grey"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="@string/user_details"
                 android:textAllCaps="false"
@@ -109,7 +109,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:backgroundTint="@color/blue"
+                android:backgroundTint="@color/dark_grey"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="@string/logout"
                 android:textAllCaps="false"
