--- a/app/src/main/res/layout/transaction_card.xml
+++ b/app/src/main/res/layout/transaction_card.xml
@@ -51,7 +51,7 @@
                 android:layout_marginEnd="16dp"
                 android:fontFamily="@font/montserrat_alternates_bold"
                 android:text="20-10-2018"
-                android:textColor="@color/blue"
+                android:textColor="@color/dark_grey"
                 android:textSize="8dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +64,7 @@
                 android:layout_marginEnd="16dp"
                 android:fontFamily="@font/montserrat_alternates_bold"
                 android:text="15:00"
-                android:textColor="@color/blue"
+                android:textColor="@color/dark_grey"
                 android:textSize="8dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +78,7 @@
                 android:layout_marginBottom="32dp"
                 android:maxLines="2"
                 android:text="Receiver Name"
-                android:textColor="@color/blue"
+                android:textColor="@color/colorWhite"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
