--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -2,6 +2,6 @@
     android:shape="rectangle">
     <gradient
         android:angle="180"
-        android:endColor="#1F618D"
-        android:startColor="@color/blue" />
+        android:endColor="@color/light_grey"
+        android:startColor="@color/dark_grey" />
 </shape>
