--- a/app/src/main/res/drawable/textview_background.xml
+++ b/app/src/main/res/drawable/textview_background.xml
@@ -5,7 +5,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/colorBlack" />
+        android:color="@color/light_grey" />
 
     <corners android:radius="8dp" />
 
