--- a/app/src/main/res/drawable/view_background.xml
+++ b/app/src/main/res/drawable/view_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:shape="rectangle">
-    <solid android:color="@color/blue" />
+    <solid android:color="@color/dark_grey" />
     <corners
         android:topLeftRadius="12dp"
         android:topRightRadius="12dp" />
