--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -229,7 +229,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
-                android:backgroundTint="@color/blue"
+                android:backgroundTint="@color/dark_grey"
                 android:elevation="10dp"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="@string/register_btn"
