--- a/app/src/main/res/layout/enable_pincode_dialog.xml
+++ b/app/src/main/res/layout/enable_pincode_dialog.xml
@@ -46,7 +46,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/dark_grey"
         android:text="@string/done"
         app:layout_constraintEnd_toStartOf="@+id/btn_cancel_btn"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/dark_grey"
         android:text="@string/cancel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn_enablePin_set_btn"
