--- a/app/src/main/res/layout/fragment_buy_token.xml
+++ b/app/src/main/res/layout/fragment_buy_token.xml
@@ -198,7 +198,7 @@
                     android:layout_width="96dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
-                    android:backgroundTint="@color/blue"
+                    android:backgroundTint="@color/dark_grey"
                     android:text="Convert"
                     android:textAllCaps="false"
                     android:textColor="@color/colorWhite"
@@ -535,7 +535,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
-                android:backgroundTint="@color/blue"
+                android:backgroundTint="@color/dark_grey"
                 android:elevation="10dp"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="@string/buy"
