--- a/app/src/main/res/layout/fragment_coin.xml
+++ b/app/src/main/res/layout/fragment_coin.xml
@@ -74,7 +74,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/ic_eth"
-                android:backgroundTint="@color/blue"
+                android:backgroundTint="@color/dark_grey"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -201,7 +201,7 @@
         android:layout_width="150dp"
         android:layout_height="60dp"
         android:layout_marginStart="16dp"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/dark_grey"
         android:elevation="10dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="@string/send"
@@ -223,7 +223,7 @@
         android:fontFamily="@font/montserrat_bold"
         android:text="@string/receive"
         android:textAllCaps="false"
-        android:textColor="@color/blue"
+        android:textColor="@color/dark_grey"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
