--- a/app/src/main/res/layout/fragment_token_transfer.xml
+++ b/app/src/main/res/layout/fragment_token_transfer.xml
@@ -327,7 +327,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/dark_grey"
         android:elevation="10dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="@string/send"
