--- a/app/src/main/res/layout/pincode_custom_dialog.xml
+++ b/app/src/main/res/layout/pincode_custom_dialog.xml
@@ -61,7 +61,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/dark_grey"
         android:text="@string/set"
         app:layout_constraintEnd_toStartOf="@+id/btn_cancel_btn"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +75,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="9dp"
         android:layout_marginEnd="8dp"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/dark_grey"
         android:text="@string/cancel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn_set"
