--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -17,25 +17,26 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView5"
         app:layout_constraintTop_toTopOf="parent" />
-    <!--
-        <yanzhikai.textpath.AsyncTextPathView
+
+
+    <yanzhikai.textpath.AsyncTextPathView
             android:id="@+id/yukoni_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="100dp"
             android:layout_marginBottom="8dp"
-            android:textAlignment="center"
-            android:textSize="30sp"
-            app:duration="1300"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:paintStrokeColor="@color/colorWhite"
-            app:pathStrokeColor="@color/colorWhite"
-            app:text="rand50"
-            app:textInCenter="true"
-            tools:visibility="gone" />-->
+        android:textAlignment="center"
+        android:textSize="30sp"
+        app:duration="1300"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:paintStrokeColor="@color/colorWhite"
+        app:pathStrokeColor="@color/colorWhite"
+        app:text="rand50"
+        app:textInCenter="true"
+        tools:visibility="gone" />
 
 
     <com.github.ybq.android.spinkit.SpinKitView
